--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "janus"
+description = "A scratchpad-like text manipulator with LLM integration written in Rust"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+readme = "README.md"
+repository = "https://github.com/lukeaar/janus"
+license-file = "COPYING"
 
 [dependencies]
+eframe = "0.25.0"
+syntect = "5.0"
