--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/lukeaar/janus"
 license-file = "COPYING"
 
 [dependencies]
-eframe = { version = "0.25.0", default-features = false, features = ["glow", "persistence",] }
+eframe = { version = "0.25.0", default-features = true, features = ["persistence",] }
 syntect = "5.0"
 serde = "1.0.195"
+epi = "0.17.0"
